moved INSTALL and UPGRADE to docs/

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-A short and temporary installation manual can be found in INSTALL.
-An upgrade manual can be found in UPGRADE.
+A short and temporary installation manual can be found in docs/INSTALL.
+An upgrade manual can be found in docs/UPGRADE.
 
 See the documentation repository for further manuals:
 http://www.usebb.net/docs/index.php/Main_Page.
