--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,7 +4,7 @@ UseBB 0.4 Changelog
 ------------------------------
 
 - Added topic subscription feature + subscriptions overview in Your Panel.
-- Added detailed online list.
+- Added detailed online and member list.
 - Added feature #301: Search engine friendly URL's.
 - Added feature #337: Allow all kinds of user names.
 - Added feature #338: Allow users to delete their own posts.
