Added smiley graphics.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,5 @@
 Please see http://www.usebb.net/about/team.php
 for a list of people involved in UseBB's development.
+
+Smilies are copyrighted by aiwebs.co.nz and distributed under
+the terms of the GNU General Public License.
