Don't do length check of password on login form.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,10 @@
 $Header$
 
+UseBB 0.5 Changelog
+------------------------------
+
+- Don't do length check of password on login form.
+
 UseBB 0.4 Changelog
 ------------------------------
 
