--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,9 +3,11 @@ $Header$
 UseBB 0.4.1 Changelog
 ------------------------------
 
+- Updated German translation.
 - Final fix for Cyrillic (and other) character sets.
 - Fixes for UseBB to work on PHP 4.1.0.
 - Don't do length check of password on login form.
+- Several small template fixes.
 
 UseBB 0.4 Changelog
 ------------------------------
