--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,13 @@
-Please see http://www.usebb.net/about/team.php
-for a list of people involved in UseBB's development.
+UseBB is brought to you with the help of numerous people.
+
+Please see http://www.usebb.net/about/team.php for a list of
+people involved in UseBB's development.
+
+Also thanks to many people helping us by reporting bugs,
+giving feature suggestions and various pieces of helpful code.
 
 Smilies are copyrighted by aiwebs.co.nz and distributed under
 the terms of the GNU General Public License.
+
+Last but not least, thanks to Sourceforge.net for partially
+hosting the project and making UseBB's development possible.
