--- a/docs/INSTALL
+++ b/docs/INSTALL
@@ -12,6 +12,7 @@ can follow these directions:
 
 1. Execute install/usebb.sql on your database. Currently, UseBB needs 10 tables.
 3. Edit config.php to your preferences.
+   (You might want to use http://usebb.sourceforge.net/docs/doku.php?id=config.php_guide)
 4. Upload all the files to your host.
 5. Delete the directory install/ for security reasons.
 6. Register a first user. It will automatically be an administrator.
