--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,10 @@
 $Header$
 
+UseBB 0.5 Changelog
+------------------------------
+
+- Fixed bad smiley parsing code.
+
 UseBB 0.4.1 Changelog
 ------------------------------
 
