--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,6 +3,7 @@ $Header$
 UseBB 0.5 Changelog
 ------------------------------
 
+- Make edit post location bar contain full path.
 - Fixed bad smiley parsing code.
 
 UseBB 0.4.1 Changelog
