--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,6 +3,7 @@ $Header$
 UseBB 0.5 Changelog
 ------------------------------
 
+- Added topic review feature.
 - Make edit post location bar contain full path.
 - Fixed bad smiley parsing code.
 
