--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,8 +4,9 @@ UseBB 0.5 Changelog
 ------------------------------
 
 - Added topic review feature.
+- Usernames and passwords only take alfanumeric characters.
+- New displayed name option, able to set all kinds of names.
 - Fixed security issue concerning quoting posts.
-- Make length check work better with entities.
 - Make edit post location bar contain full path.
 - Fixed bad smiley parsing code.
 
