--- a/AUTHORS
+++ b/AUTHORS
@@ -9,5 +9,9 @@ giving feature suggestions and various pieces of helpful code.
 Smilies are copyrighted by aiwebs.co.nz and distributed under
 the terms of the GNU General Public License.
 
+Javascript insert_tags() function copyrighted by the DokuWiki
+development team and distributed under the terms of the
+GNU General Public License.
+
 Last but not least, thanks to Sourceforge.net for partially
 hosting the project and making UseBB's development possible.
