--- a/Changelog.txt
+++ b/Changelog.txt
@@ -9,6 +9,7 @@ UseBB 0.5 Changelog
 - Usernames and passwords only take alphanumeric characters.
 - Fixed security issue concerning quoting posts.
 - Fixed bad smiley parsing code.
+- Don't send subscription mail to poster himself.
 - Make edit post location bar contain full path.
 - Graphical buttons replaced by HTML ones.
 
