--- a/Changelog.txt
+++ b/Changelog.txt
@@ -6,10 +6,12 @@ UseBB 0.5 Changelog
 - Added topic review feature.
 - Added displayed name option, able to set all kinds of names.
 - Added BBCode and smiley controls on post form.
+- Able to view number of hidden users and hidden users marked for admins.
 - Usernames and passwords only take alphanumeric characters.
 - Fixed security issue concerning quoting posts.
 - Fixed bad smiley parsing code.
 - Fixed too much stripping of backslashes.
+- Fixed bad unhtml() function.
 - Don't send subscription mail to poster himself.
 - Make edit post location bar contain full path.
 - Several fixes to guarantee security.
