Added bad words filter.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -6,6 +6,7 @@ UseBB 0.5 Changelog
 - Added topic review feature.
 - Added displayed name option, able to set all kinds of names.
 - Added BBCode and smiley controls on post form.
+- Added bad words filter.
 - Able to view number of hidden users and hidden users marked for admins.
 - Usernames and passwords only take alphanumeric characters.
 - Fixed security issue concerning quoting posts.
