Added jump to new post in topic link.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,6 +8,7 @@ UseBB 0.5 Changelog
 - Added BBCode and smiley controls on post form.
 - Added bad words filter.
 - Added ability to disable or limit viewing rights of the stats box.
+- Added jump to new post in topic link.
 - Able to view number of hidden users and hidden users marked for admins.
 - Usernames and passwords only take alphanumeric characters.
 - Auto detect board URL and cookie path if set to empty.
