--- a/Changelog.txt
+++ b/Changelog.txt
@@ -14,6 +14,7 @@ UseBB 0.5 Changelog
 - Usernames and passwords only take alphanumeric characters.
 - Auto detect board URL and cookie path if set to empty.
 - Fixed bug #374: MySQL results not getting freed.
+- Fixed bug #429: E_NOTICE on automatically starting sessions.
 - Fixed security issue concerning quoting posts.
 - Fixed bad smiley parsing code.
 - Fixed too much stripping of backslashes.
