--- a/Changelog.txt
+++ b/Changelog.txt
@@ -11,6 +11,7 @@ UseBB 0.5 Changelog
 - Added ability to disable or limit viewing rights of the stats box.
 - Added jump to new post in topic link.
 - Added flood protection.
+- Added auto subscribe feature.
 - Fixed bug #374: MySQL results not getting freed.
 - Fixed bug #429: E_NOTICE on automatically starting sessions.
 - Fixed security issue concerning quoting posts.
