Added hide moderator list feature settable per forum.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -15,6 +15,7 @@ UseBB 0.5 Changelog
 - Added auto detect board URL and cookie path if set to empty.
 - Added unsubscribe multiple topics possibility for subscriptions overview.
 - Added trash topic feature (moves topic to predefined trash forum).
+- Added hide moderator list feature settable per forum.
 - Fixed bug #374: MySQL results not getting freed.
 - Fixed bug #429: E_NOTICE on automatically starting sessions.
 - Fixed security issue concerning quoting posts.
