Better SQL error catching.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -35,6 +35,7 @@ UseBB 0.5 Changelog
 - Several fixes to guarantee security.
 - Several fixes to template parser.
 - usebb_die() calls replaced by trigger_error().
+- Better SQL error catching.
 - Graphical buttons replaced by HTML ones.
 - Nicer paging links.
 - Various template improvements.
