--- a/Changelog.txt
+++ b/Changelog.txt
@@ -30,6 +30,7 @@ UseBB 0.5 Changelog
 - Fixed security issue concerning topic subscription.
 - Fixed bug which sends subscription mails to poster himself.
 - FAQ redesigned to have contents and one question at a time.
+- Keep submitted info on edit profile form.
 - Able to view number of hidden users and hidden users marked for admins.
 - Usernames and passwords only take alphanumeric characters.
 - Make edit post location bar contain full path.
