Fixed bug #475: Undefined Index error in first stage install.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -24,6 +24,7 @@ UseBB 0.5 Changelog
 - Fixed bug #374: MySQL results not getting freed.
 - Fixed bug #429: E_NOTICE on automatically starting sessions.
 - Fixed bug #469: Blank Topic Possibilities And &...; Things.
+- Fixed bug #475: Undefined Index error in first stage install.
 - Fixed security issue concerning quoting posts.
 - Fixed bad smiley parsing code.
 - Fixed too much stripping of backslashes.
