--- a/Changelog.txt
+++ b/Changelog.txt
@@ -6,6 +6,7 @@ UseBB 0.5.1 Changelog
 - Search now escapes % and _ and shows search options on result view.
 - Fixed bug #487: Installer ignores invalid database configuration.
 - Fixed bug which keeps 'board closed' in location bar for admins.
+- Some fixes to the search engine.
 
 UseBB 0.5 Changelog
 ------------------------------
