--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,6 +3,7 @@ $Header$
 UseBB 0.5.1 Changelog
 ------------------------------
 
+- Added search member's posts link on profile page.
 - Search now escapes % and _ and shows search options on result view.
 - Allow search options to be passed via GET.
 - Fixed bug #487: Installer ignores invalid database configuration.
