--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,6 +8,7 @@ UseBB 0.5.1 Changelog
 - Search now escapes % and _ and shows search options on result view.
 - Allow search options to be passed via GET.
 - Fixed bug #487: Installer ignores invalid database configuration.
+- Fixed bug #496: BBCode and smiley controls in IE don't work.
 - Fixed bug which keeps 'board closed' in location bar for admins.
 - Fixed bug which leads to SQL error when forums are excluded from stats.
 - Fixed bug which sends subscription e-mail in language of poster.
