--- a/Changelog.txt
+++ b/Changelog.txt
@@ -15,6 +15,7 @@ UseBB 0.5.1 Changelog
 - Some fixes to the search engine.
 - Show 5 last page links for topic on topic list.
 - New language loading function.
+- Added seperate language var 'CurrentPage' for online list.
 
 UseBB 0.5 Changelog
 ------------------------------
