--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,6 +4,7 @@ UseBB 0.6 Changelog
 ------------------------------
 
 - Fixed bug #512: too big font sizes allowed.
+- Do not add session ID's for Googlebot.
 
 UseBB 0.5.1 Changelog
 ------------------------------
