--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,6 +7,7 @@ UseBB 0.6 Changelog
 - Fixed bug #535: changing e-mail address forces new password.
 - Fixed bug #537: tabindex for 'remember me' checkbox missing.
 - Do not add session ID's for Googlebot.
+- Statistics grammar change (singular vs plural).
 
 UseBB 0.5.1 Changelog
 ------------------------------
