--- a/Changelog.txt
+++ b/Changelog.txt
@@ -6,8 +6,8 @@ UseBB 0.6 Changelog
 - Fixed bug #512: too big font sizes allowed.
 - Fixed bug #535: changing e-mail address forces new password.
 - Fixed bug #537: tabindex for 'remember me' checkbox missing.
+- Fixed bug which includes certain characters in the URL.
 - Do not add session ID's for Googlebot.
-- Fix ".", "," and ";" being included in BBCode links.
 - Statistics grammar change (singular vs plural).
 
 UseBB 0.5.1 Changelog
