--- a/Changelog.txt
+++ b/Changelog.txt
@@ -9,6 +9,7 @@ UseBB 0.6 Changelog
 - Fixed bug which includes certain characters in the URL.
 - Do not add session ID's for Googlebot.
 - Statistics grammar change (singular vs plural).
+- Sorting fixes for member list.
 
 UseBB 0.5.1 Changelog
 ------------------------------
