--- a/Changelog.txt
+++ b/Changelog.txt
@@ -12,6 +12,7 @@ UseBB 0.6 Changelog
 - Sorting fixes for member list.
 - 404 and 403 error codes returned when applicable.
 - Removed duplicate set_page_title() calls in Your Panel.
+- kick_user_to_only_viewable_forum renamed to single_forum_mode.
 
 UseBB 0.5.1 Changelog
 ------------------------------
