Replace level integers with constants.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -13,6 +13,7 @@ UseBB 0.6 Changelog
 - 404 and 403 error codes returned when applicable.
 - Removed duplicate set_page_title() calls in Your Panel.
 - kick_user_to_only_viewable_forum renamed to single_forum_mode.
+- Replace level integers with constants.
 
 UseBB 0.5.1 Changelog
 ------------------------------
