--- a/Changelog.txt
+++ b/Changelog.txt
@@ -17,6 +17,7 @@ UseBB 0.6 Changelog
 - Template fixes.
 - Fix potentional server errors.
 - Don't show forum list on search when only one forum is available.
+- CSS has been detached from the templating system.
 
 UseBB 0.5.1 Changelog
 ------------------------------
