Removed the trash feature, will be reintroduced later.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -18,6 +18,7 @@ UseBB 0.6 Changelog
 - Fix potentional server errors.
 - Don't show forum list on search when only one forum is available.
 - CSS has been detached from the templating system.
+- Removed the trash feature, will be reintroduced later.
 
 UseBB 0.5.1 Changelog
 ------------------------------
