Friendly URL for RSS feed is now rss.xml.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -19,6 +19,7 @@ UseBB 0.6 Changelog
 - Don't show forum list on search when only one forum is available.
 - CSS has been detached from the templating system.
 - Removed the trash feature, will be reintroduced later.
+- Friendly URL for RSS feed is now rss.xml.
 
 UseBB 0.5.1 Changelog
 ------------------------------
