--- a/Changelog.txt
+++ b/Changelog.txt
@@ -9,15 +9,15 @@ UseBB 0.6 Changelog
 - Fixed bug #537: tabindex for 'remember me' checkbox missing.
 - Fixed bug which includes certain characters in the URL.
 - Fixed bug in and renamed kick_user_to_only_viewable_forum to single_forum_mode.
+- Fixed bug that may lead to server errors.
 - Fixed bug which might have led to undefined refere_to errors.
 - Do not add session ID's for Googlebot.
 - Statistics grammar change (singular vs plural).
 - Sorting fixes for member list.
-- 404 and 403 error codes returned when applicable.
+- HTTP 404 and 403 error codes returned when applicable.
 - Removed duplicate set_page_title() calls in Your Panel.
 - Replace level integers with constants.
 - Template fixes.
-- Fix potentional server errors.
 - Don't show forum list on search when only one forum is available.
 - CSS has been detached from the templating system.
 - Removed the trash feature, will be reintroduced later.
