--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,6 +4,7 @@ UseBB 0.6 Changelog
 ------------------------------
 
 - Added to ACP: version check.
+- Added auto focus feature using improved template engine.
 - Fixed bug #512: too big font sizes allowed.
 - Fixed bug #535: changing e-mail address forces new password.
 - Fixed bug #537: tabindex for 'remember me' checkbox missing.
@@ -17,7 +18,7 @@ UseBB 0.6 Changelog
 - HTTP 404 and 403 error codes returned when applicable.
 - Removed duplicate set_page_title() calls in Your Panel.
 - Replace level integers with constants.
-- Template fixes.
+- Template improvements and fixes.
 - Don't show forum list on search when only one forum is available.
 - CSS has been detached from the templating system.
 - Removed the trash feature, will be reintroduced later.
