--- a/Changelog.txt
+++ b/Changelog.txt
@@ -25,6 +25,7 @@ UseBB 0.6 Changelog
 - Friendly URL for RSS feed is now rss.xml.
 - Major template engine improvements and code cleanups.
 - Content type can now be set in global.tpl.php.
+- Don't let Google index all post links with duplicate content.
 
 UseBB 0.5.1 Changelog
 ------------------------------
