--- a/Changelog.txt
+++ b/Changelog.txt
@@ -5,6 +5,7 @@ UseBB 0.6 Changelog
 
 - Added to ACP: version check.
 - Added to ACP: IP address lookup.
+- Added to ACP: SQL toolbox.
 - Added auto focus feature using improved template engine.
 - Added keywords config and description and keywords meta-tags.
 - Fixed bug #512: too big font sizes allowed.
