--- a/Changelog.txt
+++ b/Changelog.txt
@@ -31,6 +31,7 @@ UseBB 0.6 Changelog
 - Major template engine improvements and code cleanups.
 - Content type can now be set in global.tpl.php.
 - Don't let Google index all post links with duplicate content.
+- Jabber profile field clickable.
 
 UseBB 0.5.1 Changelog
 ------------------------------
