--- a/Changelog.txt
+++ b/Changelog.txt
@@ -6,7 +6,7 @@ UseBB 0.6 Changelog
 - Added to ACP: version check.
 - Added to ACP: IP address lookup.
 - Added to ACP: SQL toolbox.
-- Added auto focus feature using improved template engine.
+- Added auto focus on many forms using improved template engine.
 - Added keywords config and description and keywords meta-tags.
 - Fixed bug #512: too big font sizes allowed.
 - Fixed bug #535: changing e-mail address forces new password.
