--- a/Changelog.txt
+++ b/Changelog.txt
@@ -32,7 +32,8 @@ UseBB 0.6 Changelog
 - Major template engine improvements and code cleanups.
 - Content type can now be set in global.tpl.php.
 - Don't let Google index all post links with duplicate content.
-- Jabber profile field clickable.
+- Jabber profile field made clickable.
+- Smilies don't require whitespace anymore to be parsed.
 
 UseBB 0.5.1 Changelog
 ------------------------------
