--- a/docs/INSTALL
+++ b/docs/INSTALL
@@ -13,7 +13,8 @@ You might want to use install/install.php to quickly set up your board. Otherwis
 2. Edit config.php to your preferences. You might want to use http://usebb.sourceforge.net/docs/doku.php?id=config.php_guide
 3. Upload all the files to your host.
 4. Delete the directory install/ for security reasons.
-5. Register a first user. It will automatically be an administrator.
-6. Test UseBB.
+5. Chmod config.php so that it is writable by the webserver (try chmod 777).
+6. Register a first user. It will automatically be an administrator.
+7. Test UseBB.
 
 Note: to further set up your forum, see: http://usebb.sourceforge.net/docs/doku.php?id=administration_without_acp
