--- a/docs/INSTALL
+++ b/docs/INSTALL
@@ -10,11 +10,11 @@ Before installing UseBB, make sure your host accords to the minimal system requi
 You might want to use install/install.php to quickly set up your board. Otherwise, you can follow these directions:
 
 1. Execute install/schemas/mysql.sql and install/usebb.sql on your database. Currently, UseBB needs 12 tables.
-2. Edit config.php to your preferences. You might want to use http://usebb.sourceforge.net/docs/doku.php?id=config.php_guide
+2. Edit config.php to your preferences. You might want to use http://usebb.sourceforge.net/docs/doku.php?id=configuration:config.php_guide
 3. Upload all the files to your host.
 4. Delete the directory install/ for security reasons.
 5. Chmod config.php so that it is writable by the webserver (try chmod 777).
 6. Register a first user. It will automatically be an administrator.
 7. Test UseBB.
 
-Note: to further set up your forum, see: http://usebb.sourceforge.net/docs/doku.php?id=administration_without_acp
+Note: to further set up your forum, see: http://usebb.sourceforge.net/docs/doku.php?id=configuration:administration_without_acp
