--- a/Changelog.txt
+++ b/Changelog.txt
@@ -38,6 +38,7 @@ UseBB 0.6 Changelog
 - Throw error when $session->update() not called before getting session info.
 - Template improvements and fixes.
 - Major template engine improvements and code cleanups.
+- Adjusted docs and installers to suit new locations on UseBB Docs.
 
 UseBB 0.5.1 Changelog
 ------------------------------
