--- a/Changelog.txt
+++ b/Changelog.txt
@@ -39,6 +39,7 @@ UseBB 0.6 Changelog
 - Template improvements and fixes.
 - Major template engine improvements and code cleanups.
 - Adjusted docs and installers to suit new locations on UseBB Docs.
+- common.php reorganization, including config.php check.
 
 UseBB 0.5.1 Changelog
 ------------------------------
